# Codex-Batavi

./: .cursorrules  .gitignore  02_INDEX_PERSONAE_E_COMANDO.md  03_CRONICAS.md  04_ATLAS_E_TOPOGRAFIA.md  05_ARSENAL_E_LOGISTICA.md  06_ENCICLOPEDIA_BIOLOGICA_E_BESTIARIO.md  07_LEXICON_E_LITANIAS.md  2026-04-06.md  CHANGELOG.md  README.md
arsenal-e-logistica/: INDEX.md  catalogo-chassis-e-armaduras.md  coorte-das-falanges-e-resumo-visual.md  coortes-de-especialidade.md  engenharia-padrao-noviomagus.md  identidade-visual-infantaria.md  intro-e-engenharia-padrao-noviomagus.md
atlas-e-topografia/: ATLAS_E_TOPOGRAFIA.md  INDEX.md  atlas-geral.md
codex-batavi/: .cursorrules  FOUNDATION-WAR-RETCON-PLANNING.md  FOUNDING-OUTSIDER-KNOWLEDGE-PLAN.md  GLOSSARY-EN.md  HAND-MADE-VISUALS-PLAN.md  HERALDRY-INGAME-PLAN.md  README.md  SM2-ASTARTES-MOD-PLAN.md  SPACE-WOLVES-TRAITOR-RELATIONS-PLAN.md  TOMORROW-TODOS.md  TRANSLATION-HYBRID.md  WOLFS-CURSE-PRIMARIS-PLANNING.md  imagens-lore  visual-identity-paint-guide.md
cronicas/: INDEX.md
forja/: CHEATSHEET.md  README.md  TUTORIAL.md  presets.toml  pyproject.toml
forja/batavi_forja/: __init__.py  cli.py  comfy_client.py  config.py
forja/batavi_forja.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
forja/templates/prompts/: README.md  alaric_bust_portrait.toml  alaric_bust_portrait_crimson_helm.toml  alaric_castra_lupus.toml  alaric_castra_lupus_crimson_helm.toml  alaric_reference_fullbody.toml  grimdark_character_showcase.toml
forja/workflows/: README.md  workflow_api.json
(+1071 files in other folders)
