[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batavi-forja"
version = "0.1.0"
description = "CLI to generate Cohors Batavorum lore images via ComfyUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "websockets>=12",
]

[project.scripts]
batavi-img = "batavi_forja.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["batavi_forja*"]
